--- a/src/app/pages/dashboard/electricity/electricity.component.html
+++ b/src/app/pages/dashboard/electricity/electricity.component.html
@@ -1,7 +1,7 @@
 <nb-card size="large">
   <div class="consumption-table">
     <div class="table-header">
-      <div>My Departments</div>
+      <div>My Subjects</div>
     </div>
 
     <nb-tabset fullWidth>
@@ -20,6 +20,43 @@
   </div>
 
   <div class="chart-container">
+    <div class="table-header">
+      Student Details
+    </div>
+    <nb-tabset fullWidth>
+      <nb-tab [tabTitle]="studentObject.Name" [hidden]='false'>
+        <div class="stats-month">
+          <div>
+            <span >Name</span>
+          </div>
+          <div >
+            <b>{{studentObject.Name}}</b> 
+          </div>
+        </div>
+
+        <div class="stats-month">
+          <div>
+            <span >Department</span>
+          </div>
+          <div >
+            <b>{{studentObject.Department}}</b> 
+          </div>
+        </div>
+
+        <div class="stats-month">
+          <div>
+            <span >Year</span>
+          </div>
+          <div >
+            <b>{{studentObject.Year}}</b> 
+          </div>
+        </div>
+      </nb-tab>
+    </nb-tabset>
+  </div>
+
+
+  <!-- <div class="chart-container">
     <div class="chart-header">
       <div class="header-stats">
         <div class="stats-block">
@@ -51,5 +88,6 @@
 
     </div>
     <ngx-electricity-chart></ngx-electricity-chart>
-  </div>
+  </div> -->
+
 </nb-card>
